2005-07-15  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/breadthFirstEnumeration.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/postorderEnumeration.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/preorderEnumeration.java:
	Removed unused import.

2005-07-15  Roman Kennke  <roman@kennke.org>

	* gnu/testlet/javax/swing/JToggleButton/actionEvent.java:
	Tests if ActionListeners are correctly notified of changes
	to the selected property.
	* gnu/testlet/javax/swing/JToggleButton/click.java:
	Actually test JToggleButton here, not JCheckBoxes.

2005-07-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* gnu/testlet/java/util/logging/LogManager/logging.properties,
	gnu/testlet/java/util/logging/LogManager/readConfiguration.java
	gnu/testlet/java/util/logging/LogManager/TestHandler.java: New testlet
	for LogManager.

2005-07-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/jaxax/swing/tree/TreePath/constructors.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/equals.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/getLastPathComponent.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/getParentPath.java
	(test): added additional checks,
	* gnu/testlet/jaxax/swing/tree/TreePath/getPath.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/getPathComponent.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/getPathCount.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/isDescendant.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/pathByAddingChild.java: new file,
	* gnu/testlet/jaxax/swing/tree/TreePath/serialization.java: new file.
	
2005-07-13  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/AbstractButton/getActionCommand.java: New base class
	for tests in subclasses.
	* gnu/testlet/javax/swing/JButton/getActionCommand.java,
	gnu/testlet/javax/swing/JRadioButton/getActionCommand.java,