@@ -1,5 +1,10 @@
 2005-07-15  Robert Schuster  <robertschuster@fsfe.org>
 
+	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/depthFirstEnumeration.java:
+	New test.
+
+2005-07-15  Robert Schuster  <robertschuster@fsfe.org>
+
 	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/breadthFirstEnumeration.java,
 	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/postorderEnumeration.java,
 	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/preorderEnumeration.java:
